--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "prisma": "^5.2.0"
   }
 }
