--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "prisma": "^5.2.0"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "node prisma/seed.ts"
   }
 }
